[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/SettingsUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Crosshair.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/JournalUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/FluffText.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/DiagnosticsText.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/Diagnostics.gd" type="Script" id=7]
[ext_resource path="res://UI/Toolbar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/HotkeyGuide.tres" type="DynamicFont" id=9]
[ext_resource path="res://UI/GardenerNote.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/DialogUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://theme.tres" type="Theme" id=12]
[ext_resource path="res://UI/TutorialPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Fonts/Anita semi square.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://UI/Credits.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SettingsUI" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8
margin_top = -25.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="JournalAndGuideUI" parent="." instance=ExtResource( 4 )]
visible = false
theme = ExtResource( 12 )

[node name="Diagnostics" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
alignment = 2
script = ExtResource( 7 )

[node name="FPS" type="Label" parent="Diagnostics"]
unique_name_in_owner = true
margin_right = 54.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
text = "FPS"

[node name="FPS2" type="Label" parent="Diagnostics"]
unique_name_in_owner = true
margin_top = 43.0
margin_right = 54.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 5 )
text = "FPS"

[node name="TransformDiagnostics" type="Label" parent="Diagnostics"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 54.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 6 )

[node name="FPSUpdateTimer" type="Timer" parent="Diagnostics"]
wait_time = 0.2

[node name="Crosshair" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false

[node name="Toolbar" parent="." instance=ExtResource( 8 )]
anchor_left = 0.3
anchor_top = 0.845
anchor_right = 0.7
anchor_bottom = 1.002
margin_top = 5.59998
margin_bottom = 5.59998
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HotkeyGuide" type="Control" parent="."]
anchor_left = 0.009
anchor_top = 0.8
anchor_right = 0.235
anchor_bottom = 0.98
mouse_filter = 2

[node name="Controls" type="VBoxContainer" parent="HotkeyGuide"]
anchor_bottom = 1.0
margin_right = 45.0
mouse_filter = 2
alignment = 2

[node name="MultitoolC2" type="Label" parent="HotkeyGuide/Controls"]
unique_name_in_owner = true
visible = false
margin_top = 46.0
margin_right = 178.0
margin_bottom = 71.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 9 )
text = "Remove Plant"

[node name="MultitoolC" type="Label" parent="HotkeyGuide/Controls"]
unique_name_in_owner = true
visible = false
margin_top = 29.0
margin_right = 229.0
margin_bottom = 82.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 9 )
text = "Speed up growth
Harvest Seeds"

[node name="JournalC" type="Label" parent="HotkeyGuide/Controls"]
margin_top = 75.0
margin_right = 108.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 9 )
text = "Journal"

[node name="SettingsC" type="Label" parent="HotkeyGuide/Controls"]
margin_top = 104.0
margin_right = 108.0
margin_bottom = 129.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 9 )
text = "Settings"

[node name="Actions" type="VBoxContainer" parent="HotkeyGuide"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.0
alignment = 2

[node name="MultitoolA2" type="Label" parent="HotkeyGuide/Actions"]
unique_name_in_owner = true
visible = false
margin_top = 46.0
margin_right = 168.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 9 )
text = "Multitool Grip"

[node name="MultitoolA" type="Label" parent="HotkeyGuide/Actions"]
unique_name_in_owner = true
visible = false
margin_top = 46.0
margin_right = 49.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 9 )
text = "Trigger"

[node name="JournalA" type="Label" parent="HotkeyGuide/Actions"]
margin_top = 75.0
margin_right = 48.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 9 )
text = "Y/B"

[node name="SettingsA" type="Label" parent="HotkeyGuide/Actions"]
margin_top = 104.0
margin_right = 48.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 9 )
text = "X/A"

[node name="DialogUI" parent="." instance=ExtResource( 11 )]
plant_scanned_color = Color( 0.317647, 0.694118, 0.607843, 1 )
linger_time = 1.0

[node name="SkipCutsceneLabel" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.749
anchor_right = 0.95
anchor_bottom = 0.838
margin_top = -528.28
margin_bottom = -528.28
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Controls" type="VBoxContainer" parent="SkipCutsceneLabel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SkipCutsceneText" type="Label" parent="SkipCutsceneLabel/Controls"]
unique_name_in_owner = true
margin_right = 1152.0
margin_bottom = 129.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 576, 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Thumbsticks: move and turn
Multiool Hand: Trigger to activate
Use off-hand index finger to
select tool from multitool wrist menu"
align = 1
autowrap = true

[node name="HoldSkipCutscene" type="Timer" parent="SkipCutsceneLabel"]

[node name="GardenerNote" parent="." instance=ExtResource( 10 )]
visible = false

[node name="TutorialPanel" parent="." instance=ExtResource( 13 )]
anchor_left = 0.015
anchor_top = 0.019
anchor_right = 0.29
anchor_bottom = 0.278

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="BlackScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LoadingLabel" type="Label" parent="BlackScreen/CenterContainer"]
unique_name_in_owner = true
margin_left = 581.0
margin_top = 340.0
margin_right = 699.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 5 )
text = "Loading.."
align = 1
valign = 1

[node name="SunsHot" type="Label" parent="BlackScreen/CenterContainer"]
visible = false
margin_left = 568.0
margin_top = 340.0
margin_right = 711.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 5 )
text = "Sun's hot.."

[node name="ClickToFocus" type="Control" parent="."]
visible = false
anchor_top = 0.178
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="ClickToFocus"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="ClickToFocus/CenterContainer"]
margin_left = 532.0
margin_top = 264.0
margin_right = 747.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 5 )
text = "Click to focus
game window"
align = 1
valign = 2

[node name="ClickToUpgrade" type="Control" parent="."]
visible = false
anchor_top = 0.108
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="ClickToUpgrade"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="ClickToUpgrade/CenterContainer"]
margin_left = 511.0
margin_top = 306.0
margin_right = 768.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 5 )
text = "Click to upgrade"
align = 1
valign = 2

[node name="Credits" parent="." instance=ExtResource( 15 )]
visible = false

[connection signal="timeout" from="Diagnostics/FPSUpdateTimer" to="Diagnostics" method="_on_FPSUpdateTimer_timeout"]
